--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  conditional_builder_null_safety: ^0.0.6
+  http: ^0.13.4
   shared_preferences: ^2.0.11
   webview_flutter: ^3.0.0
   hexcolor: ^2.0.5
