--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  fluttertoast: ^8.0.8
   conditional_builder_null_safety: ^0.0.6
   http: ^0.13.4
   shared_preferences: ^2.0.11
