--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,9 @@ dependencies:
   google_fonts: ^2.3.1
   provider: ^6.0.2
   flutter_bloc: ^8.0.1
-  bloc:    ^8.0.2
+  bloc: ^8.0.3
   smooth_page_indicator: ^1.0.0+2
+
   flutter:
     sdk: flutter
 
@@ -79,6 +80,7 @@ flutter:
      - family: Jannah
        fonts:
          - asset: assets/fonts/ArbFONTS-Janna-LT-Regular.ttf
+           weight: 700
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
