--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
   conditional_builder_null_safety: ^0.0.6
   http: ^0.13.4
   shared_preferences: ^2.0.13
-  webview_flutter: ^3.0.1
   hexcolor: ^2.0.6
   dio: ^4.0.4
   dio_http2_adapter: ^2.0.0
@@ -42,6 +41,8 @@ dependencies:
   flutter_bloc: ^8.0.1
   bloc: ^8.0.3
   smooth_page_indicator: ^1.0.0+2
+  splash_screen_view: ^3.0.0
+
 
   flutter:
     sdk: flutter
@@ -50,6 +51,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  webview_flutter: ^3.0.4
+
+
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +65,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -76,6 +81,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/onBoarding1.png
+    - assets/images/splash_screen_2.png
 
   fonts:
      - family: Jannah
